@@ -1,7 +1,13 @@
+import static org.gradle.api.JavaVersion.VERSION_11
+
 buildscript {
     Properties constants = new Properties()
     file("$projectDir/./constants.properties").withInputStream { constants.load(it) }
     ext {
+        confidential_id_release_group = constants.getProperty('confidentialIdReleaseGroup')
+        baseVersion = constants.getProperty('baseVersion')
+        versionSuffix = constants.getProperty('versionSuffix')
+
         corda_release_group = constants.getProperty('cordaReleaseGroup')
         corda_release_version = constants.getProperty('cordaReleaseVersion')
         corda_gradle_plugins_version =constants.getProperty('cordaGradlePluginsVersion')
@@ -12,11 +18,20 @@ buildscript {
         corda_platform_version = constants.getProperty('cordaPlatformVersion')
         token_release_group= constants.getProperty('tokenReleaseGroup')
         token_release_version= constants.getProperty('tokenReleaseVersion')
-        confidential_id_release_group = constants.getProperty('confidentialIdReleaseGroup')
         artifactory_context_url = constants.getProperty('artifactoryContextUrl')
         public_artifact_url = constants.getProperty('publicArtifactURL')
-        confidential_id_release_version = constants.getProperty('confidentialIdReleaseVersion')
-        confidential_id_versionSuffix = constants.getProperty('versionSuffix')
+
+        test_module_opens = [
+                '--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+                '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED'
+        ]
+        test_module_exports = [
+                '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+        ]
     }
 
     repositories {
@@ -32,24 +47,36 @@ buildscript {
         classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:cordformation:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
-        classpath "com.gradle:gradle-enterprise-gradle-plugin:$gradleEnterprisePlugin"
-        classpath "com.gradle:common-custom-user-data-gradle-plugin:$customUserDataGradlePlugin"
     }
 }
 
 plugins {
-    id "com.jfrog.artifactory" version "4.7.5"
+    id "org.ajoberstar.grgit" version "4.0.0"
+}
+
+apply plugin: 'net.corda.plugins.cordapp'
+apply plugin: 'net.corda.plugins.cordformation'
+apply plugin: 'net.corda.plugins.quasar-utils'
+apply plugin: 'corda.root-publish'
+
+// If the command line project option -PversionFromGit is added to the gradle invocation, we'll resolve
+// the latest git commit hash and timestamp and create a version postfix from that
+if (project.hasProperty("versionFromGit")) {
+    ext.versionSuffix = "${grgit.head().dateTime.format("yyyyMMdd_HHmmss")}-${grgit.head().abbreviatedId}"
+}
+
+if (ext.versionSuffix != "") {
+    ext.confidential_id_release_version = "${ext.baseVersion}-${ext.versionSuffix}".toString()
+} else {
+    ext.confidential_id_release_version = "${ext.baseVersion}".toString()
 }
 
 allprojects {
-    if (confidential_id_versionSuffix.isEmpty()) {
-        version confidential_id_release_version
-    } else {
-        version "$confidential_id_release_version-$confidential_id_versionSuffix"
-    }
+    apply plugin: 'net.corda.plugins.quasar-utils'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
 
     group "$confidential_id_release_group"
-    apply plugin: 'kotlin'
+    version "$confidential_id_release_version"
 
     //Ensure all transitive log4J depenndencies are up to date
     configurations.all {
@@ -60,22 +87,63 @@ allprojects {
      }
     }
 
+    quasar {
+        excludePackages.addAll(
+                "antlr**",
+                "com.codahale**",
+                "com.fasterxml.**",
+                "com.github.benmanes.caffeine.**",
+                "com.google.**",
+                "com.lmax.**",
+                "com.zaxxer.**",
+                "net.bytebuddy**",
+                "io.github.classgraph**",
+                "io.netty*",
+                "liquibase**",
+                "net.i2p.crypto.**",
+                "nonapi.io.github.classgraph.**",
+                "org.apiguardian.**",
+                "org.bouncycastle**",
+                "org.codehaus.**",
+                "org.h2**",
+                "org.hibernate**",
+                "org.jboss.**",
+                "org.objenesis**",
+                "org.w3c.**",
+                "org.xml**",
+                "org.yaml**",
+                "rx**",
+                "kotlin**"
+        )
+    }
+
     repositories {
         mavenLocal()
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url "https://repo.gradle.org/gradle/libs-releases-local" }
         maven { url "$public_artifact_url/corda" }
+        maven { url "$public_artifact_url/corda-releases" }
         maven { url "$public_artifact_url/corda-dependencies" }
         maven { url "$public_artifact_url/corda-lib" }
         maven { url "$public_artifact_url/corda-releases" }
+        maven {
+            url "$artifactory_context_url/corda-dev"
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username = findProperty('cordaArtifactoryUsername') ?: System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = findProperty('cordaArtifactoryPassword') ?: System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
         kotlinOptions {
-            languageVersion = "1.2"
-            apiVersion = "1.2"
-            jvmTarget = "1.8"
+            languageVersion = "1.8"
+            apiVersion = "1.8"
+            jvmTarget = VERSION_11
             javaParameters = true   // Useful for reflection.
         }
     }
@@ -87,27 +155,6 @@ allprojects {
     }
 }
 
-apply plugin: 'net.corda.plugins.cordapp'
-apply plugin: 'net.corda.plugins.cordformation'
-apply plugin: 'net.corda.plugins.quasar-utils'
-apply plugin: "com.gradle.build-scan"
-apply plugin: "com.gradle.common-custom-user-data-gradle-plugin"
-
-
-buildScan {
-    server = gradleEnterpriseUrl
-    allowUntrustedServer = false
-    def apiKey = project.findProperty('CORDA_GRADLE_SCAN_KEY') ?: System.getenv('CORDA_GRADLE_SCAN_KEY')
-    if (apiKey?.trim()) {
-        publishAlways()
-        capture {
-            taskInputFiles = true
-        }
-        uploadInBackground = false
-        accessKey = apiKey
-    }
-}
-
 sourceSets {
     main {
         resources {
@@ -115,46 +162,46 @@ sourceSets {
         }
     }
 }
+
 cordapp {
-    signing {
-        enabled false
-    }
-    info {
+    targetPlatformVersion corda_platform_version.toInteger()
+    minimumPlatformVersion corda_platform_version.toInteger()
+    workflow {
         name "Confidential Identities - New"
         vendor "Corda Open Source"
-        targetPlatformVersion corda_platform_version.toInteger()
-        minimumPlatformVersion corda_platform_version.toInteger()
+        versionId 1
+    }
+    signing {
+        enabled false
     }
 }
 
 dependencies {
     // Corda dependencies.
-    cordaCompile "$corda_release_group:corda-core:$corda_release_version"
-    cordaCompile "$corda_release_group:corda-node-api:$corda_release_version"
-    cordaRuntime "$corda_release_group:corda:$corda_release_version"
+    cordaProvided "$corda_release_group:corda-core:$corda_release_version"
+    cordaProvided "$corda_release_group:corda-node-api:$corda_release_version"
 
     // CorDapp dependencies.
     cordapp project(":workflows")
 
-    cordaCompile "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
-    cordaCompile "org.apache.logging.log4j:log4j-web:${log4j_version}"
-    cordaCompile "org.slf4j:jul-to-slf4j:$slf4j_version"
+    cordaProvided "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
+    cordaProvided "org.apache.logging.log4j:log4j-web:${log4j_version}"
+    cordaProvided "org.slf4j:jul-to-slf4j:$slf4j_version"
 }
 
 def publishProjects = [project(":workflows")]
 
 configure(publishProjects) { subproject ->
-    apply plugin: 'kotlin'
-    apply plugin: 'maven-publish'
-    apply plugin: 'com.jfrog.artifactory'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'corda.common-publishing'
 
     task sourceJar(type: Jar, dependsOn: subproject.classes) {
-        classifier = 'sources'
+        archiveClassifier = 'sources'
         from sourceSets.main.allSource
     }
 
     task javadocJar(type: Jar, dependsOn: subproject.javadoc) {
-        classifier = 'javadoc'
+        archiveClassifier = 'javadoc'
         from javadoc.destinationDir
     }
 
@@ -197,24 +244,7 @@ configure(publishProjects) { subproject ->
     }
 }
 
-artifactory {
-    publish {
-        contextUrl = artifactory_context_url
-        repository {
-            repoKey = 'corda-lib'
-            username = System.getenv('CORDA_ARTIFACTORY_USERNAME') ?: System.getProperty('corda.artifactory.username')
-            password = System.getenv('CORDA_ARTIFACTORY_PASSWORD') ?: System.getProperty('corda.artifactory.password')
-        }
-
-        defaults {
-            if (publishProjects.contains(project)) {
-                publications(project.name)
-            }
-        }
-    }
-}
-
 wrapper {
-    gradleVersion = "5.6"
+    gradleVersion = "7.6"
     distributionType = Wrapper.DistributionType.ALL
 }
